Updates readme and adds notification channel support

--- a/app/src/main/assets/readme.html
+++ b/app/src/main/assets/readme.html
@@ -1,8 +1,12 @@
 <html>
     <body>
         <h1>Read me</h1>
-        <div>
-            Welcome to grow updater. This is a simple addon for Grow Tracker that periodically checks the Releases page on github for updates and automatically downloads ans prompts for install. This app does not do any other website requests.
-        </div>
+        <p>
+            Welcome to grow updater. This is a simple addon for Grow Tracker that periodically checks the Releases page on github for updates and automatically downloads and prompts for install. This app does not do any other website requests.
+        </p>
+
+        <p>
+            Note: this plugin will not work if you originally installed from f-droid.
+        </p>
     </body>
 </html>
